[B]1.0.4[/B][I]Jan 2013[/I]
- Added CAPS Roboto Bold Font Edited  by uNiversal
- Added Toggles for included 3rd Party Scripts
- Increased Install Default Menu Items inc Stream Radio105
- Added Yes/No Dialog for Reset Data Option
- Added New & Missing Homescreen Backgrounds
- Added Initial Support Advanced Launcher [WIP]
- Adjusted Setting Images Sizes
- BugFix Codecs on OSD Screens
- Adjusted Video OSD hide U/S info when Streaming
- BugFix When Setting Sticky Action Forgets Menu Item
- Added more Preset Menu Choices incl Streaming,PseudoTV & Advanced Launcher
- Converted MediaInfo & WideList Views for Advanced Launcher 
- New Dependency script.randomandlastitems.2.0.0 [WIP]
- BugFix Skinning Tool issues
- Added support for script.globalsearch
- Adjusted image sizes for genre backgrounds
- Added few Instant Playlists to MainMenu Options
- Added XBMC Intro Video to Startup
- Tweaked LiveTV views
- BugFix WhiteSpaces in LangFile
- New Dependency script.favourites.4.0.7
- Added New & Updated lang Files
- SysInfo, Profiles & FileManager Files Updated
- Added VideoOSD Overlay for PseudoTV
- Added ability for individual fanart settings in HomePanel
- Bugfix, Musicviz - extrafanArt showing over CDWall
- BugFix, Setting for Hide LibraryStats/Info
- BugFix, Static CDWall taking over from Dynamic wall
- Bugfix, Musicviz - extrafanArt showing over CDWall
- BugFix, Setting for Hide LibraryStats/Info

[B]1.0.3[/B][I]Dec 2012[/I]
- initial stable version
- VideoOSd uses artwork.downloader images
- Added EPG Genre Images
- Video OSD plot Info moves if no OSD menu
- Global Background Movie DB now user select directory
- Bugfix Widelist Episodes runtime showed over Plot
- Bugfix various home panel issues

[B]1.0.2[/B][I]Dec 2012[/I]
- Updated code and screenshots to XBMC guidelines
- Removed malformed studio icons
- Added "Frodo" Filter ability
- Tightned visibility on Fullwall & Lowlist
- Darkened LiveTV browser background
- Bugfix Invalid Include in video flags