@@ -6,12 +6,13 @@
   provider-name="Mudislander">
   <requires>
    <import addon="xbmc.gui" version="4.0.0"/>
-   <import addon="service.skin.widgets" version="0.0.17"/>
+   <import addon="service.skin.widgets" version="0.0.19"/>
    <import addon="script.artwork.downloader" version="12.0.12"/>
    <import addon="script.favourites" version="4.0.7"/>
-   <import addon="script.tvtunes" version="3.0.1"/>
-   <import addon="script.artistslideshow" version="1.4.6"/>
+   <import addon="script.tvtunes" version="3.0.4"/>
+   <import addon="script.artistslideshow" version="1.5.0"/>
    <import addon="script.simpleplaylists" version="1.1.0"/>
+   <import addon="script.randomandlastitems" version="2.0.2"/>
  </requires>
   <extension
     point="xbmc.gui.skin"
@@ -23,6 +24,7 @@
   <extension point="xbmc.addon.metadata">
     <summary lang="be">Hybrid a customizable skin</summary>
     <summary lang="ca">Hybrid una aparença personalitzable</summary>
+    <summary lang="da">Hybrid er et tilpasningsvenligt skin</summary>
     <summary lang="de">Hybrid ist ein anpassbarer Skin</summary>
     <summary lang="el">Hybrid, ένα προσαρμόσιμο κέλυφος</summary>
     <summary lang="en">Hybrid a customizable skin</summary>
@@ -36,6 +38,7 @@
     <summary lang="zh">Hybrid 一套可定制的皮肤</summary>
     <description lang="be">Hybrid is a customizable skin incorporating many of the now popular tweaks, addons and scripts.</description>
     <description lang="ca">Hybrid és una aparença personalitzable que incorpora molts dels ara populars ajustaments, complements i scripts.</description>
+    <description lang="da">Hybrid er et tilpasninsvenligt skin, som indarbejder mange af tidens populære tweaks, add-ons og scripts.</description>
     <description lang="de">Hybrid ist ein anpasserbarer Skin der die beliebten Optimierungen, AddOns und Scripte umfasst.</description>
     <description lang="el">Το Hybrid είναι ένα προσαρμόσιμο κέλυφος που περιλαμβάνει πολλά από τα πλέον δημοφιλή tweaks, πρόσθετα και scripts.</description>
     <description lang="en">Hybrid is a customizable skin incorporating many of the now popular tweaks, addons and scripts.</description>
@@ -49,10 +52,13 @@
     <description lang="sv">Hybrid är ett anpassningsbart skal som innehåller många av dom nu populära anpassningarna, tilläggen och skripten.</description>
     <description lang="zh">Hybrid是一套可定制的皮肤具备许多流行的改进，插件和脚本。</description>
     <disclaimer lang="be">You break it - You get to keep the pieces</disclaimer>
+    <disclaimer lang="da">Du smadrer det - Du får lov at beholde stumperne</disclaimer>
     <disclaimer lang="de">You break it - You get to keep the pieces</disclaimer>
     <disclaimer lang="el">You break it - You get to keep the pieces</disclaimer>
     <disclaimer lang="en">You break it - You get to keep the pieces</disclaimer>
+    <disclaimer lang="es">Tu lo rompes-tu tienes que guardar los trozos</disclaimer>
     <disclaimer lang="fr">Vous le cassez, vous assumez!</disclaimer>
+    <disclaimer lang="it">Chi rompe... I cocci sono suoi</disclaimer>
     <disclaimer lang="lt">You break it - You get to keep the pieces</disclaimer>
     <disclaimer lang="nl">You break it - You get to keep the pieces</disclaimer>
     <disclaimer lang="pl">Zepsułeś to - Pozbieraj kawałki</disclaimer>
