@@ -1,4 +1,10 @@
 [B]1.0.4[/B][I]Jan 2013[/I]
+
+- BugFix Zorder DialogSelect
+- BugFix HideCDart Home Screen
+- Tweak Code for HomeScreen Backgrounds (BugFix Lag)
+- Added Optional Transparency FullWallView
+- Add Support Script.TVNextAired [WIP]
 - Added CAPS Roboto Bold Font Edited  by uNiversal
 - Added Toggles for included 3rd Party Scripts
 - Increased Install Default Menu Items inc Stream Radio105
